--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.1.4",
@@ -28,6 +29,7 @@
     "react-toastify": "^10.0.5",
     "react-use-websocket": "^3.0.0",
     "styled-components": "^6.1.11",
+    "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
