--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^5.16.6",
+    "@headlessui/react": "^2.1.8",
+    "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
     "@tanstack/react-query": "^5.51.1",
     "@testing-library/jest-dom": "^5.17.0",
