--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.8",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
     "@tanstack/react-query": "^5.51.1",
@@ -23,7 +24,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
@@ -32,7 +33,8 @@
     "react-use-websocket": "^3.0.0",
     "styled-components": "^6.1.11",
     "tailwind-scrollbar": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start",
