--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.9.0",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
     "@tanstack/react-query": "^5.51.1",
@@ -29,6 +30,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
     "react-use-websocket": "^3.0.0",
     "styled-components": "^6.1.11",
