--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "lucide": "^0.453.0",
+    "lucide-react": "^0.263.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
