--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "lucide": "^0.453.0",
     "lucide-react": "^0.263.1",
     "moment": "^2.30.1",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.1.4",
@@ -66,6 +68,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.14"
   }
 }
